--- a/GeekWebSite/nbproject/project.properties
+++ b/GeekWebSite/nbproject/project.properties
@@ -29,6 +29,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.avalon-framework-4.2.0.jar=D:\\fop-1.0-bin\\avalon-framework-4.2.0.jar
+file.reference.batik-all-1.7.jar=D:\\fop-1.0-bin\\batik-all-1.7.jar
+file.reference.commons-io-1.3.1.jar=D:\\fop-1.0-bin\\commons-io-1.3.1.jar
+file.reference.commons-logging-1.0.4.jar=D:\\fop-1.0-bin\\commons-logging-1.0.4.jar
+file.reference.fop.jar=D:\\fop-1.0-bin\\fop.jar
+file.reference.javax.websocket-api-1.1.jar=D:\\javax.websocket-api-1.1.jar
+file.reference.serializer-2.7.0.jar=D:\\fop-1.0-bin\\serializer-2.7.0.jar
+file.reference.xalan-2.7.0.jar=D:\\fop-1.0-bin\\xalan-2.7.0.jar
+file.reference.xercesImpl-2.7.1.jar=D:\\fop-1.0-bin\\xercesImpl-2.7.1.jar
+file.reference.xml-apis-1.3.04.jar=D:\\fop-1.0-bin\\xml-apis-1.3.04.jar
+file.reference.xml-apis-ext-1.3.04.jar=D:\\fop-1.0-bin\\xml-apis-ext-1.3.04.jar
+file.reference.xmlgraphics-commons-1.4.jar=D:\\fop-1.0-bin\\xmlgraphics-commons-1.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +51,19 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.javax.websocket-api-1.1.jar}:\
+    ${file.reference.avalon-framework-4.2.0.jar}:\
+    ${file.reference.batik-all-1.7.jar}:\
+    ${file.reference.commons-io-1.3.1.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.fop.jar}:\
+    ${file.reference.serializer-2.7.0.jar}:\
+    ${file.reference.xalan-2.7.0.jar}:\
+    ${file.reference.xercesImpl-2.7.1.jar}:\
+    ${file.reference.xml-apis-1.3.04.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlgraphics-commons-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
